--- a/style.scss
+++ b/style.scss
@@ -26,18 +26,116 @@ p, h1, h2, h3, h4, h5, h6 {
 // Styles
 header{
     padding: 25px 35px;
-    ul{
-        display: flex;
-        justify-content: flex-end;
 
-        li{
-            list-style: none;
-            margin: 0 15px;
-            font-weight: bold;
+    .hamburger-menu{
+        display: none;
+        .menu-btn {
+            display: none;
 
-            &:hover{
-                color: #FF6464;
-                cursor: pointer;
+            &:checked ~ .menu {
+                max-height: 240px;
+            }
+
+            &:checked ~ .menu-icon{
+                .navicon{
+                    background: transparent;
+                }
+            }
+
+            &:checked ~ .menu-icon{
+                .navicon:before{
+                    transform: rotate(-45deg) translateX(7px);
+                }
+            }
+
+            &:checked ~ .menu-icon{
+                .navicon::after{
+                    transform: rotate(45deg) translateX(7px);
+                }
+            }
+        }
+        .menu-icon {
+            cursor: pointer;
+            display: flex;
+            justify-content: flex-end;
+            padding: 28px 20px;
+            position: relative;
+            user-select: none;
+
+            .navicon {
+                background: #21243D;
+                display: block;
+                height: 1px;
+                position: relative;
+                transition: background .2s ease-out;
+                width: 20px;
+
+                &:before, &:after {
+                    background: #21243D;
+                    content: '';
+                    display: block;
+                    height: 100%;
+                    position: absolute;
+                    transition: all .2s ease-out;
+                    width: 100%;
+                }
+
+                &:before {
+                    top: 5px;
+                }
+                  
+                &:after {
+                    top: -5px;
+                }
+            }
+        } 
+
+        ul {
+            overflow: hidden;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+
+            li{
+                list-style: none;
+                padding: 5px;
+                text-align: center;
+                a {
+                    color: #000;
+                    text-decoration: none;
+                    font-weight: bold;
+
+                    &:hover{
+                        color: #FF6464;
+                    }
+                }
+            } 
+        }
+        .menu {
+            max-height: 0;
+            transition: max-height .2s ease-out;
+        }
+    }    
+
+    .menu{
+        ul{
+            display: flex;
+            justify-content: flex-end;
+    
+            li{
+                list-style: none;
+                margin: 0 15px;
+                font-weight: bold;
+
+                a{
+                    color: #000;
+                    text-decoration: none;
+
+                    &:hover{
+                        color: #FF6464;
+                    }
+                }
+    
             }
         }
     }
@@ -45,7 +143,6 @@ header{
 
 .landing-page, .recent-posts, .featured-works{
     padding: 40px 150px;
-
 }
 
 .landing-page{
@@ -224,3 +321,159 @@ footer{
 
 
 
+@media only screen and (max-width: 850px) {
+    .landing-page, .featured-works, .recent-posts{
+        padding: 30px 20px;
+    }
+
+    .landing-page{
+        flex-direction: column-reverse;
+
+        div{
+            width: 100%;
+            text-align: center;
+            
+            h1{
+                margin-top: 40px;
+            }
+
+            p{
+                font-size: 1rem;
+            }
+        }
+
+        img{
+            margin: 0 auto;
+            width: 60%;
+            min-width: 180px;
+            height: auto;
+        }
+    }
+
+    .recent-posts{
+        .cards{
+            flex-direction: column;
+            
+            .card{
+                width: 100%;
+                margin: 10px 0;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    header{
+        .hamburger-menu{
+            display: block;
+        }
+
+        .menu{
+            display: none;
+        }
+    }
+
+    .recent-posts{        
+        .cards{
+            .card{
+                width: 100%;
+            }
+        }
+    }
+
+    .featured-works{
+        .title{
+            text-align: center;
+            margin-bottom: 0;
+        }
+
+        article{
+            flex-direction: column;
+            width: 100%;   
+            
+            img{
+                height: 320px;
+                
+            }
+
+            .content{
+                padding-top: 30px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .landing-page{
+       div{
+        h1{
+            font-size: 2rem;
+        }
+       }
+    }
+
+    .featured-works{
+        article{ 
+            img{
+                height: 230px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 350px){
+    .landing-page{
+        div{
+         h1{
+             font-size: 1.5rem;
+         }
+        }
+    }
+
+    .recent-posts{
+        .section-header{
+            font-size: .8rem;
+
+            .title{
+                font-size: .9rem;
+            }
+        }
+
+        .cards{
+            .card{
+                h2{
+                    width: 90%;
+                    font-size: 1.2rem;
+                }
+
+                span{
+                    font-size: .9rem;
+                }
+            }
+        }
+    }
+
+    .featured-works{
+        article{
+            .content{
+                h2{
+                    font-size: 1.2rem;
+                }
+
+                .keyword{
+                    font-size: .9rem;
+                }
+            }
+        }
+    }
+
+    footer{
+        .social-links{
+            a{
+                img{
+                    width: 200px;
+                }
+            }
+        }
+    }
+}
