--- a/style.css
+++ b/style.css
@@ -519,6 +519,12 @@ footer p {
         -ms-flex-direction: column;
             flex-direction: column;
   }
+  .works-container article a {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
   .works-container article:nth-of-type(2) {
     display: block;
   }
@@ -561,6 +567,9 @@ footer p {
   }
   .featured-works article .content {
     padding-top: 30px;
+  }
+  .detail-container img {
+    width: 100%;
   }
 }
 
